added react-hook-forms and changed background on Vision statement

--- a/styles/index.css
+++ b/styles/index.css
@@ -18,16 +18,10 @@ html {
 
 .primary-bg {
   background-color: #faffff;
-}
-
-.secondary-bg {
-  background-color: #282832;
-}
-
-.primary-text {
   color: #282832;
 }
 
-.secondary-text {
-  color: #faffff;
+.secondary-bg {
+  background-color: #d4e2e2;
+  color: #282832;
 }
