--- a/styles/index.css
+++ b/styles/index.css
@@ -10,10 +10,11 @@ html {
 }
 
 .call-to-action-btn {
-  background-color: #f67600;
+  background-color: #7f2ffd;
+  color: #faffff;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  border-radius: 9999px;
+  border-radius: 0.375rem;
 }
 
 .primary-bg {
@@ -24,4 +25,22 @@ html {
 .secondary-bg {
   background-color: #d4e2e2;
   color: #282832;
+}
+
+#bg {
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  /* width: 200%;
+  height: 200%; */
+}
+#bg img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-width: 50%;
+  min-height: 50%;
 }
