--- a/styles/index.css
+++ b/styles/index.css
@@ -44,3 +44,14 @@ html {
   min-width: 50%;
   min-height: 50%;
 }
+
+.toggle__dot {
+  top: -0.25rem;
+  left: -0.25rem;
+  transition: all 0.3s ease-in-out;
+}
+
+input:checked ~ .toggle__dot {
+  transform: translateX(100%);
+  background-color: #48bb78;
+}
