--- a/styles/index.css
+++ b/styles/index.css
@@ -27,6 +27,25 @@ html {
   color: #282832;
 }
 
+.bg-light-blue-gradient {
+  background-image: linear-gradient(to right, #d4e2e2, #e5eeee);
+}
+.bg-blue-gradient {
+  background-image: linear-gradient(to right, #ced4eb, #e2e5f1);
+}
+.bg-red-gradient {
+  background-image: linear-gradient(to right, #f2cbd8, #f5e0e8);
+}
+.bg-purple-gradient {
+  background-image: linear-gradient(to right, #d0c7db, #e3dde8);
+}
+.bg-green-gradient {
+  background-image: linear-gradient(to right, #c4d6b4, #dce6d3);
+}
+.bg-yellow-gradient {
+  background-image: linear-gradient(to right, #efe8c1, #f5f1db);
+}
+
 #bg {
   position: absolute;
   top: -50%;
