--- a/styles/index.css
+++ b/styles/index.css
@@ -9,24 +9,29 @@ html {
   background-color: #faffff;
 }
 
-.call-to-action-btn {
-  background-color: #7f2ffd;
-  color: #faffff;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-    0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  border-radius: 0.375rem;
-}
+/* --------------------------------------------------------------------------- */
+/*-----------------------------Custom Backgrounds----------------------------- */
+/* --------------------------------------------------------------------------- */
 
-.primary-bg {
+.bg-primary {
   background-color: #faffff;
   color: #282832;
 }
 
-.secondary-bg {
+.bg-secondary {
   background-color: #d4e2e2;
   color: #282832;
 }
 
+.bg-district {
+  background-image: url(../public/bg-district/multi-color.png);
+}
+.bg-district-primary {
+  background-image: url(../public/bg-district/primary.png);
+}
+.bg-district-primary-blue {
+  background-image: url(../public/bg-district/primary-blue.png);
+}
 .bg-light-blue-gradient {
   background-image: linear-gradient(to right, #d4e2e2, #e5eeee);
 }
@@ -45,6 +50,16 @@ html {
 .bg-yellow-gradient {
   background-image: linear-gradient(to right, #efe8c1, #f5f1db);
 }
+/* --------------------------------------------------------------------------- */
+/* --------------------------------------------------------------------------- */
+
+.call-to-action-btn {
+  background-color: #7f2ffd;
+  color: #faffff;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  border-radius: 0.375rem;
+}
 
 #bg {
   position: absolute;
@@ -53,6 +68,7 @@ html {
   /* width: 200%;
   height: 200%; */
 }
+
 #bg img {
   position: absolute;
   top: 0;
