--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,13 @@ html {
   font-family: "Montserrat", "Century Gothic", "sans-serif";
   background-color: #faffff;
 }
+.nav-item.active {
+  border-bottom: 1px solid #282832;
+}
 
+.nav-item:hover {
+  border-bottom: 1px solid #282832;
+}
 /* --------------------------------------------------------------------------- */
 /*-----------------------------Custom Backgrounds----------------------------- */
 /* --------------------------------------------------------------------------- */
